# OpenCv-Extension

./: .gitmodules  CMakeLists.txt  README.md
include/: GpuMat.cuh  ops.cuh
src/: main.cu
